<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_dfsync"
        app:layout_constraintBottom_toTopOf="@id/et_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/dp_80"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_account"
        android:textColor="@color/color_black"
        app:layout_constraintLeft_toLeftOf="@id/et_account"
        app:layout_constraintBottom_toTopOf="@id/et_account"
        android:layout_marginBottom="@dimen/dp_10"
        android:textSize="@dimen/sp_14"/>
    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@id/tv_pwd"
        android:background="@drawable/bg_corner_grey"/>
    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pwd"
        android:textColor="@color/color_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_account"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_14"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/bg_corner_grey"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        app:layout_constraintTop_toBottomOf="@id/et_pwd"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/tv_login"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:background="@drawable/bg_corner_blue"
        android:textSize="@dimen/sp_18"/>
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forget"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintRight_toRightOf="@id/tv_login"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"/>
</androidx.constraintlayout.widget.ConstraintLayout>